# auth.go
@@ -8,8 +8,9 @@ import (
 
 type AuthService interface {
 	SendCode(ctx context.Context, req *request.PhoneCodeRequest) bool
-	CheckCode(ctx context.Context, req *request.CheckCodeRequest) (string, error)
+	CheckCode(ctx context.Context, req *request.CheckCodeRequest) (*request.AuthTokenData, error)
 	EmailActivation(ctx context.Context, req *request.EmailActivationRequest) error
-	EmailVerification(ctx context.Context, req *request.EmailVerificationRequest) (string, error)
-	EmailLogin(ctx context.Context, req *request.EmailLoginRequest) (string, error)
+	EmailVerification(ctx context.Context, req *request.EmailVerificationRequest) (*request.AuthTokenData, error)
+	EmailLogin(ctx context.Context, req *request.EmailLoginRequest) (*request.AuthTokenData, error)
+	RefreshToken(ctx context.Context, req *request.RefreshTokenRequest) (*request.AuthTokenData, error)
 }
