# request/auth.go
@@ -22,3 +22,7 @@ type EmailLoginRequest struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
 }
+
+type RefreshTokenRequest struct {
+	RefreshToken string `json:"refresh_token"`
+}
