# request/response.go
@@ -13,5 +13,6 @@ type AuthTokenResponse struct {
 }
 
 type AuthTokenData struct {
-	Token string `json:"token"`
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
 }
